[workspace]
resolver = "2"
members = ["crates/sahara", "examples/hwid", "examples/hello", "crates/sahara_mem", "crates/sahara_info", "examples/memory"]

[workspace.package]
version = "0.1.0"
authors = ["LIMPIX31"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
serialport = "4.3"
anyhow = "1.0"
thiserror = "1.0"
