[workspace]
resolver = "2"
members = ["crates/sahara", "examples/hello_plus", "examples/hello", "examples/upload_program", "examples/eg"]

[workspace.package]
version = "0.1.0"
authors = ["LIMPIX31"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
serialport = "4.3"
anyhow = "1.0"
thiserror = "1.0"
sahara = { path = "crates/sahara" }
eg = { path = "examples/eg" }
